[gd_scene load_steps=9 format=3 uid="uid://buqvr00anmyup"]

[ext_resource type="Script" path="res://scripts/level_complete.gd" id="1_r8gc7"]
[ext_resource type="LabelSettings" uid="uid://tje0ygjwilaf" path="res://resources/small_title_label_settings.tres" id="2_dmp87"]
[ext_resource type="PackedScene" uid="uid://oq5258by1a1k" path="res://scene_objects/menu_button.tscn" id="3_1njab"]
[ext_resource type="Texture2D" uid="uid://ciddnlhcacvjl" path="res://assets/sprites/stars_unfilled.webp" id="3_ulwen"]
[ext_resource type="Texture2D" uid="uid://d3ubas71s5u06" path="res://assets/sprites/stars_filled.webp" id="4_eejmd"]
[ext_resource type="Texture2D" uid="uid://cl5h54ouarkps" path="res://assets/sprites/drawings/Mona Lisa, by Leonardo da Vinci_resized_indexed.webp" id="4_r5s5y"]
[ext_resource type="Texture2D" uid="uid://tq62h3qdi8o6" path="res://assets/sprites/drawings/Mona Lisa, by Leonardo da Vinci_resized.webp" id="4_r5vnf"]
[ext_resource type="Texture2D" uid="uid://bwhbp3rxdiaox" path="res://assets/sprites/share.webp" id="8_3jwa3"]

[node name="LevelCompleteScreen" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_r8gc7")

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.113725, 0.133333, 0.160784, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="pauseMenu" type="GridContainer" parent="background/VBoxContainer"]
custom_minimum_size = Vector2(1920, 550)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="Label" type="Label" parent="background/VBoxContainer/pauseMenu"]
custom_minimum_size = Vector2(960, 160)
layout_mode = 2
size_flags_horizontal = 5
text = "Expected:"
label_settings = ExtResource("2_dmp87")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="background/VBoxContainer/pauseMenu"]
custom_minimum_size = Vector2(960, 160)
layout_mode = 2
size_flags_horizontal = 5
text = "Submitted:"
label_settings = ExtResource("2_dmp87")
horizontal_alignment = 1
vertical_alignment = 1

[node name="expectedImage" type="TextureRect" parent="background/VBoxContainer/pauseMenu"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(960, 550)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_r5vnf")
expand_mode = 2
stretch_mode = 5

[node name="submittedImage" type="TextureRect" parent="background/VBoxContainer/pauseMenu"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(960, 550)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_r5s5y")
expand_mode = 2
stretch_mode = 5

[node name="grade" type="TextureProgressBar" parent="background/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 10.0
value = 1.0
texture_under = ExtResource("3_ulwen")
texture_progress = ExtResource("4_eejmd")
tint_over = Color(1, 0.27451, 1, 1)

[node name="nextLevelButton" parent="background/VBoxContainer" instance=ExtResource("3_1njab")]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Next level"

[node name="HBoxContainer" type="HBoxContainer" parent="background/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="mainMenuButton" parent="background/VBoxContainer/HBoxContainer" instance=ExtResource("3_1njab")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30
disabled = true
text = "Back to main menu"

[node name="replayButton" parent="background/VBoxContainer/HBoxContainer" instance=ExtResource("3_1njab")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 30
disabled = true
text = "Replay"

[node name="ShareButton" type="TextureButton" parent="background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1732.0
offset_top = 646.0
offset_right = 1864.0
offset_bottom = 778.0
texture_normal = ExtResource("8_3jwa3")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="background/VBoxContainer/nextLevelButton" to="." method="load_next_level"]
[connection signal="pressed" from="background/VBoxContainer/HBoxContainer/mainMenuButton" to="." method="return_to_main_menu"]
[connection signal="pressed" from="background/VBoxContainer/HBoxContainer/replayButton" to="." method="reload_current_level"]
[connection signal="focus_entered" from="background/ShareButton" to="." method="_on_share_button_entered"]
[connection signal="focus_exited" from="background/ShareButton" to="." method="_on_share_button_exited"]
[connection signal="mouse_entered" from="background/ShareButton" to="." method="_on_share_button_entered"]
[connection signal="mouse_exited" from="background/ShareButton" to="." method="_on_share_button_exited"]
[connection signal="pressed" from="background/ShareButton" to="." method="_on_share_button_pressed"]
